<resources>
    <string name="app_name">Blood Pressure Tracker</string>
    <string name="link_privacy_policy" translatable="false">https://pages.flycricket.io/blood-pressure-track/privacy.html</string>
    <string name="txt_email_feedback" translatable="false">teammarketing@lutech.ltd</string>
    <string name="english" translatable="false">English</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="french" translatable="false">Français</string>
    <string name="india" translatable="false">हिन्दी</string>
    <string name="spain" translatable="false">Español</string>
    <string name="portugal" translatable="false">Português</string>
    <string name="germany" translatable="false">Deutsch</string>
    <string name="italy" translatable="false">Italiano</string>
    <string name="japan" translatable="false">日本</string>
    <string name="uae" translatable="false">عربي</string>
    <string name="israel" translatable="false">עִברִית</string>
    <string name="korea" translatable="false">한국인</string>
    <string name="nederland" translatable="false">Nederlands</string>
    <string name="sounth_african" translatable="false">Afrikaans</string>
    <string name="georgian" translatable="false">Georgian</string>
    <string name="polish" translatable="false">Polish</string>
    <string name="turkish" translatable="false">Turkish</string>
    <string-array name="info_des_array_1">
        <item>@string/txt_info_des_1_1</item>
        <item>@string/txt_info_des_1_2</item>
    </string-array>
    <string-array name="info_des_array_2">
        <item>@string/txt_info_des_2_1</item>
        <item>@string/txt_info_des_2_2</item>
    </string-array>
    <string-array name="info_des_array_3">
        <item>@string/txt_info_des_3_1</item>
        <item>@string/txt_info_des_3_2</item>
        <item>@string/txt_info_des_3_3</item>
        <item>@string/txt_info_des_3_4</item>
    </string-array>
    <string-array name="info_des_array_4">
        <item>@string/txt_info_des_4_1</item>
        <item>@string/txt_info_des_4_2</item>
        <item>@string/txt_info_des_4_3</item>
        <item>@string/txt_info_des_4_4</item>
    </string-array>
    <string-array name="info_des_array_5">
        <item>@string/txt_info_des_5_1</item>
    </string-array>
    <string-array name="info_des_array_6">
        <item>@string/txt_info_des_6_1</item>
        <item>@string/txt_info_des_6_2</item>
    </string-array>
    <string-array name="info_des_array_7">
        <item>@string/txt_info_des_7_1</item>
    </string-array>
    <string-array name="info_des_array_8">
        <item>@string/txt_info_des_8_1</item>
    </string-array>
    <string-array name="info_des_array_9">
        <item>@string/txt_info_des_9_1</item>
        <item>@string/txt_info_des_9_2</item>
        <item>@string/txt_info_des_9_3</item>
    </string-array>
    <string-array name="info_des_array_10">
        <item>@string/txt_info_des_10_1</item>
        <item>@string/txt_info_des_10_2</item>
    </string-array>
    <string-array name="info_des_array_11">
        <item>@string/txt_info_des_11_1</item>
        <item>@string/txt_info_des_11_2</item>
        <item>@string/txt_info_des_11_3</item>
    </string-array>
    <string-array name="info_des_array_12">
        <item>@string/txt_info_des_12_1</item>
        <item>@string/txt_info_des_12_2</item>
        <item>@string/txt_info_des_12_3</item>
    </string-array>
    <string-array name="info_des_array_13">
        <item>@string/txt_info_des_13_1</item>
        <item>@string/txt_info_des_13_2</item>
        <item>@string/txt_info_des_13_3</item>
        <item>@string/txt_info_des_13_4</item>
    </string-array>
    <string-array name="info_des_array_14">
        <item>@string/txt_info_des_14_1</item>
        <item>@string/txt_info_des_14_2</item>
    </string-array>
    <string-array name="info_des_array_15">
        <item>@string/txt_info_des_15_1</item>
        <item>@string/txt_info_des_15_2</item>
        <item>@string/txt_info_des_15_3</item>
        <item>@string/txt_info_des_15_4</item>
    </string-array>
    <string-array name="info_des_array_16">
        <item>@string/txt_info_des_16_1</item>
        <item>@string/txt_info_des_16_2</item>
        <item>@string/txt_info_des_16_3</item>
        <item>@string/txt_info_des_16_4</item>
    </string-array>
    <string-array name="state_blood_sugar_array">
        <item>@string/txt_default</item>
        <item>@string/txt_during_fasting</item>
        <item>@string/txt_before_eating</item>
        <item>@string/txt_after_eating_1h</item>
        <item>@string/txt_after_eating_2h</item>
        <item>@string/txt_before_bedtime</item>
        <item>@string/txt_before_workout</item>
        <item>@string/txt_after_wordkout</item>
    </string-array>
    <string name="txt_toast_ads">This action can contain ads</string>
    <string name="txt_home">Home</string>
    <string name="txt_info">Info</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_signature">Signature</string>
    <string name="txt_crazy">Crazy</string>
    <string name="txt_melt">Melt</string>
    <string name="txt_run">Run</string>
    <string name="txt_lazy">Lazy</string>
    <string name="txt_diet">Diet</string>
    <string name="txt_nightmare">Nightmare</string>
    <string name="txt_right">Right</string>
    <string name="txt_left">Left</string>
    <string name="txt_remind_me_to_record">Remind me to record</string>
    <string name="txt_blood_pressure">Blood Pressure</string>
    <string name="txt_select_date">Please select a date</string>
    <string name="txt_heart_rate">Heart Rate</string>
    <string name="txt_blood_sugar">Blood Sugar</string>
    <string name="txt_weight_and_bmi">Weight &amp; BMI</string>
    <string name="txt_language_options">Language Options</string>
    <string name="txt_export_as_file">Export as file</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="txt_share_with_friends">Share with Friends</string>
    <string name="txt_feedback">Send Feedback</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_your_data">Your Data</string>
    <string name="txt_food_scanner">Food Scanner</string>
    <string name="txt_tell_us_your_gender">Tell us your gender</string>
    <string name="txt_female">Female</string>
    <string name="txt_male">Male</string>
    <string name="txt_others">Others</string>
    <string name="txt_age">Age</string>
    <string name="txt_height">Height</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_save">Save</string>
    <string name="txt_title_info_1">How is it measured?</string>
    <string name="txt_title_info_2">What is blood pressure?</string>
    <string name="txt_title_info_3">Lifestyle for hypertension</string>
    <string name="txt_title_info_4">Types of blood pressure</string>
    <string name="txt_title_info_5">Hypotention</string>
    <string name="txt_title_info_6">Hypertention: Why is it a rish factory?</string>
    <string name="txt_title_info_7">How does hypertension affect the brain</string>
    <string name="txt_title_info_8">How does blood pressure affect the kidneys?</string>
    <string name="txt_title_info_9">How does blood pressure affect other organs?</string>
    <string name="txt_title_info_10">Diagnosing hypertension</string>
    <string name="txt_title_info_11">What are Normal Blood Sugar Levels?</string>
    <string name="txt_title_info_12">What is Diabetes?</string>
    <string name="txt_title_info_13">How Common is Diabetes?</string>
    <string name="txt_title_info_14">How to Know if You Have Diabetes?</string>
    <string name="txt_title_info_15">How Many Types of Diabetes are There?</string>
    <string name="txt_title_info_16">Know about Heart Rate</string>
    <string name="txt_back">Back</string>
    <string name="txt_info_des_1_1">Blood pressure is measured by means of devices called sphygmomanometers , popularly known as blood pressure monitors , which must undergo regulatory validation and approval.</string>
    <string name="txt_info_des_1_2">To ensure that the measurement obtained is correct , you must follow a series of instructions : \10– As blood pressure changes throughout the day and night , always take the measurement at the same time\10– Find a quiet room , without noise or interruptions , with a temperature of 20-25 ° C. You must be relaxed . Do not drink , eat , smoke or do physical exercise for half an hour before taking the measurement . Rest for 5 minutes before taking the measurement . Sit comfortably with your back against the back of the chair , do not cross your legs and take off any clothes that might press on your arm . Leave the palm of your hand facing upwards and your elbow slightly bent at the level of your heart . If you use a wrist blood pressure monitor , place the wrist strap at the level of your heart . Do not talk during the measurement.</string>
    <string name="txt_info_des_2_1">Blood pressure or blood pressure is essential for the blood to circulate through the blood vessels and thus be able to carry the necessary oxygen and nutrients to all the tissues of the body . It can be defined as the force that the blood exerts on the walls of the arteries , which is highest ( systolic pressure ) when the heart pumps it into the arteries and lowest ( diastolic pressure ) between heartbeats . These two values ( systolic and diastolic ) are used to measure blood pressure.</string>
    <string name="txt_info_des_2_2">When it comes to monitoring general health , blood pressure should be checked , because if it is above normal ( hypertension ) , it can mean a significant risk of serious diseases ( heart disease , heart attack , stroke , kidney failure , etc. ) . It is also important to control low blood pressure ( hypotension ) as it can cause confusion , dizziness , lightheadedness , fainting , weakness or drowsiness.</string>
    <string name="txt_info_des_3_1">According to experts, there are factors that influence hypertension that we cannot control, such as aging, menopause or genetics. However, we can act by combating other factors that influence the onset of hypertension such as obesity, a sedentary lifestyle, poor diet or high salt consumption. Therefore, in order to control our blood pressure figures, the two basic rules are to pay attention to our diet, eliminating salt and following the Mediterranean diet, and to exercise.</string>
    <string name="txt_info_des_3_2">As for the latter recommendation, the World Health Organization (WHO) has included it for three decades among the most important non-pharmacological measures aimed at lowering blood pressure values. Specifically, it recommends that adults should practice at least 150 minutes of moderate-intensity aerobic physical activity or 75 minutes of intense activity per week.</string>
    <string name="txt_delete_the_tag">Delete The Tag?</string>
    <string name="txt_are_you_sure_to_delete_this_tag">Are you sure to delete this tag?</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_add_note">Add Note</string>
    <string name="txt_maximum_20_characters">Maximum 20 characters.</string>
    <string name="txt_please_enter_something">Please enter something</string>
</resources>