<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_layout_add_note"
    android:orientation="vertical"
    android:paddingTop="@dimen/_15sdp"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/txt_add_note"
        android:textColor="#323232"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/txt_maximum_20_characters"
        android:textColor="#323232"
        android:textSize="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtContentNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/border_edt_add_note"
        android:ellipsize="end"
        android:maxLength="20"
        android:fontFamily="@font/montserrat_extra_light"
        android:gravity="start"
        android:hint="@string/txt_please_enter_something"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:textColor="#323232"
        android:textColorHint="#323232"
        android:textCursorDrawable="@drawable/cursor_edittext"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_cancel_add_note"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_9sdp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/txt_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/border_button_delete_add_note"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_9sdp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/txt_save"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>
