<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_layout_delete_dialog"
    android:orientation="vertical"
    android:paddingTop="@dimen/_18sdp"
    android:paddingBottom="@dimen/_15sdp"
    android:tag="layout/dialog_delete_the_tag_0">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/txt_delete_the_tag"
        android:textColor="#323232"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/txt_are_you_sure_to_delete_this_tag"
        android:textColor="#323232"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancelDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_cancel_delete_tag"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_9sdp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/txt_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btnDeleteNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_delete_tag"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/_9sdp"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/txt_delete"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>
