<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.yourdata.YourDataActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/txt_your_data"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/txt_tell_us_your_gender"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/txt_female" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/txt_male" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/txt_others" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/txt_age"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_edittext"
                android:imeActionLabel="Done"
                android:inputType="number"
                android:maxLength="3"
                android:paddingStart="@dimen/_10sdp"
                android:text="40"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/txt_height"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_edittext"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:imeActionLabel="Done"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="170"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/bg_edittext">

                    <Spinner
                        android:id="@+id/spHeight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="cm" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/txt_weight"
                android:textColor="@color/black"
                android:textSize="@dimen/item_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_edittext"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edtWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="70"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/bg_edittext">

                    <Spinner
                        android:id="@+id/spWeight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="cm" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_btn_save"
                android:text="@string/txt_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>